add list event function

--- a/22.7.11/index.html
+++ b/22.7.11/index.html
@@ -12,6 +12,7 @@
         <!-- js -->
         <script src="./main.js" defer></script>
         <script src="./greeting.js" defer></script>
+        <script src="./todo.js" defer></script>
         <script src="https://kit.fontawesome.com/77bc876b29.js" crossorigin="anonymous"></script>
         <!-- jquery -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
@@ -26,5 +27,10 @@
         <input type="text" placeholder="What your name?"/>
     </form>
     <h4 class="js-greetings greetings"></h4>
+    <form action="" class="js-todoForm">
+        <input type="text" placeholder="Write a to do"/>
+    </form>
+    <ul class="js-todoList">
+    </ul>
 </body>
 </html>
